criei uma lista nao ordenada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
   <h1>Olá Git</h1>
   <p>Olá estado</p>
-
+  
+  <ul>
+    <li>Sapato</li>
+    <li>Toalha</li>
+    <li>Meia</li>
+  </ul>
 
 </body>
 </html>
